testsuite/tests/parser/should_fail/MultilineStringsUnterminated.hs
{-# LANGUAGE MultilineStrings #-}

x :: String
x =
  """
  test

y :: Int
y = 0
