testsuite/tests/parser/should_fail/MultilineStringsUnterminated.stderr
MultilineStringsUnterminated.hs:10:1: error: [GHC-21231]
    lexical error at end of input

